<resources>
    <string name="app_name">Online Complaint Management</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Welcome to Online Complaint Management</string>
    <string name="dashboard_user">user</string>
    <string name="dashboard_admin">admin</string>

    <string name="admin_water">Water Complaints</string>
    <string name="adminLogin_text">Provide your Email and Password to Login</string>
    <string name="adminLogin_signupDesc">Don\'t have an Account?</string>
    <string name="adminLogin_LoginDesc">Already have an Account?</string>
    <string name="adminLogin_forgotDesc">Forgot your Password?</string>
    <string name="adminLogin_loginBtn">Login</string>
    <string name="adminLogin_passwordEditText">Password</string>
    <string name="adminLogin_EmailEditText">Email</string>
    <string name="adminLogin_RegisterBtn">Register</string>

    <string name="developer_name">Developed By Theebika</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="desc">Provide your Email and Password to Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="unknown_desc">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_address">Enter Address</string>
    <string name="hint_phone_number">Enter Phone Number</string>
</resources>